Fix tooltip long word text overflow

--- a/scss/components/_tooltip.scss
+++ b/scss/components/_tooltip.scss
@@ -40,6 +40,7 @@
   background-clip: padding-box;
   box-shadow: 2px 3px 4px 0px rgba(0, 0, 0, 0.53);
   white-space: pre-wrap;
+  word-break: break-all;
 }
 
 .tooltip::after {
